--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,4 +30,11 @@
       </div>
     </div>
   </body>
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Trippin'</strong> by <a href="https://github.com/kellims/Capstone-Project-Trippin.com">Kelli Simon</a>. 
+      </p>
+    </div>
+  </footer>  
 </html>
