--- a/main_app/templates/trip_list.html
+++ b/main_app/templates/trip_list.html
@@ -12,11 +12,11 @@
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by5">
-          <img src="{{trip.image}}" alt="{{trip.name}}" />
+          <img src="{{trip.image}}" alt="{{trip.location}}" />
         </figure>
       </div>
       <div class="card-header">
-        <p class="card-header-title">{{trip.name}}</p>
+        <p class="card-header-title">{{trip.location}}</p>
       </div>
     </div>
   </a>
