--- a/main_app/templates/trip_list.html
+++ b/main_app/templates/trip_list.html
@@ -6,6 +6,7 @@
 {% block content %}
 
 <h1 class="title pt-5">My Trips</h1>
+<a class="button is-rounded is-info is-inverted" href="{% url 'trip_create' %}">Add A New Trip</a>
 <div class="gallery">
   {% for trip in trips %}
   <a href="">
