removed reservation from Model

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -36,7 +36,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Trippin'</strong> by <a href="https://github.com/kellims/Capstone-Project-Trippin.com">Kelli Simon</a>. 
+        <strong>Trippin</strong> by <a href="https://github.com/kellims/Capstone-Project-Trippin.com">Kelli Simon</a>. 
       </p>
     </div>
   </footer>  
