Edit Trip Working

--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -9,7 +9,7 @@
 </div>
 <div class="detail__container">
     <div class="buttons">
-        <a href="" class="button is-rounded is-info is-inverted">
+        <a href="{% url 'trip_update' trip.pk %}" class="button is-rounded is-info is-inverted">
             <span class="icon">
                 <i class="fas fa-edit"></i>
             </span>
