delete route working

--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -14,7 +14,7 @@
                 <i class="fas fa-edit"></i>
             </span>
         </a>
-        <a href="" class="button is-rounded is-danger is-inverted">
+        <a href="{% url 'trip_delete' trip.pk %}" class="button is-rounded is-danger is-inverted">
             <span class="icon">
                 <i class="fas fa-trash-alt"></i>
             </span>
