--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
     <body >
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-menu navbar-end">
-                <a class="navbar-item" href="/">Trippin'</a>
+                <a class="navbar-item" href="/" class="button is-rounded is-info is-inverted">Trippin</a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
@@ -22,7 +22,7 @@
                 </a>
             </div>
             <div class="navbar-menu navbar-start">
-                <a class="navbar-item" href="/about">About</a>
+                <a class="navbar-item" href="/about" class="button is-rounded is-info is-inverted">About</a>
             </div>
         
         </nav>
@@ -37,7 +37,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Trippin</strong> by <a href="https://github.com/kellims/Capstone-Project-Trippin.com">Kelli Simon</a>. 
+        <strong>Trippin.</strong> Created by <a href="https://www.linkedin.com/in/kelli-m-simon/">Kelli Simon</a>. Capstone Project 2023. 
       </p>
     </div>
   </footer>  
