--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,3 +1,4 @@
 {% extends 'base.html' %} {% block content %}
-<h1>About Capstone Project</h1>
+<h1 class="title is-4">About Capstone Project: Trippin</h1>
+<h2 class="subtitle">Subtitle</h2>
 {% endblock %}
