--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %} {% block content %}
-<h1 class="title is-4">About Capstone Project: Trippin</h1>
-<h2 class="subtitle">Subtitle</h2>
+<h1 class="title is-4">About Trippin</h1>
+<h2 class="subtitle">A place to plan your trips together with your family and friends. </h2>
 {% endblock %}
