added reservation create view

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -3,3 +3,21 @@
 }
 
 
+.detail__reservations {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.reservation {
+    width: 100%;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 0.1fr 3fr 1fr;
+    border-radius: 5px;
+}
+
+.reservation:hover {
+    background-color: hsla(0, 0%, 100%, 0.1);
+    cursor: pointer;
+}
