--- a/main_app/templates/reservation_detail.html
+++ b/main_app/templates/reservation_detail.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %} 
 {% block content %}
 
-<div class="detail__name">
-    
-    <h1 class="name">{{reservation.name}}</h1>
-    
-</div>
+
 <div class="detail__container">
     
     <div class="detail__about">
-        <h4 class="title is-4">About {{ reservation.name }}:</h4>
-        <p>{{reservation.description}}</p>
+        <h4 class="title is-4"> {{ reservation.type }}: {{ reservation.name }} on {{ reservation.start_date}}</h4>
+        
+        <p>{{ reservation.description }}</p>
+        <br>
+        <p>Location: {{ reservation.location }}</p>
+        <br>
+        <p>File: <a href="{{ reservation.file }}">{{ reservation.file }}</a></p>
     </div>
 
     
