--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -1,6 +1,37 @@
+
+body {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .content {
+    flex: 1;
+  }
+  
+.footer {
+    margin-top: auto;
+    text-align: center;
+    padding: 20px;
+    background-color: #f5f5f5;
+  }
+
+
 .title, .subtitle{
     text-align: center;
 }
+
+.detail__about{
+    text-align: center;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .buttons a {
+    margin: 0 5px;
+  }
 
 
 .detail__reservations {
