back arrow button added to trip detail page

--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -10,6 +10,11 @@
 </div>
 <div class="detail__container">
     <div class="buttons">
+        <a href="" class="button is-rounded is-primary is-inverted">
+            <span class="icon">
+              <i class="fas fa-arrow-left"></i>
+            </span>
+          </a>
         <a href="{% url 'trip_update' trip.pk %}" class="button is-rounded is-info is-inverted">
             <span class="icon">
                 <i class="fas fa-edit"></i>
