updates to trip detail page

--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -32,7 +32,7 @@
         </a> -->
     </div>
     <div class="detail__about">
-        <h4 class="title is-4">About My Trip</h4>
+        <h4 class="title is-4">About your Trip to {{ trip.location }}</h4>
         <p>{{trip.description}}</p>
     </div>
 
