--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -10,7 +10,7 @@
 </div>
 <div class="detail__container">
     <div class="buttons">
-        <a href="" class="button is-rounded is-primary is-inverted">
+        <a href="{% url 'trip_list' %}" class="button is-rounded is-primary is-inverted">
             <span class="icon">
               <i class="fas fa-arrow-left"></i>
             </span>
@@ -31,11 +31,13 @@
             </span>
         </a> -->
     </div>
+    <hr>
+    <br>
     <div class="detail__about">
         <h4 class="title is-4">About your Trip to {{ trip.location }}</h4>
         <p>{{trip.description}}</p>
     </div>
-
+    <hr>
     <div class="detail__reservations mb-5">
         <h3 class="title is-3">Reservations</h3> 
 
@@ -126,11 +128,13 @@
     
         {% for reservation in trip.reservations.all %}
         <div class="reservation">
-          <span>{{forloop.counter}}</span>
+          <!-- <span>{{forloop.counter}}</span> -->
           <span><b><a href="{% url 'reservation_detail' reservation.pk %}">{{ reservation.name }}</a></b></span>
           <span>{{reservation.start_date}}</span>
           <span>{{reservation.type}}</span>
+          
         </div>
+        
             {% empty %}
         <article class="message">
           <div class="message-header">
