reservation delete working

--- a/main_app/templates/reservation_detail.html
+++ b/main_app/templates/reservation_detail.html
@@ -17,7 +17,7 @@
                     <i class="fas fa-edit"></i>
                 </span>
             </a>
-            <a href="" class="button is-rounded is-danger is-inverted">
+            <a href="{% url 'reservation_delete' reservation.pk %}" class="button is-rounded is-danger is-inverted">
                 <span class="icon">
                     <i class="fas fa-trash-alt"></i>
                 </span>
