--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,6 +24,16 @@
             <div class="navbar-menu navbar-start">
                 <a class="navbar-item" href="/about" class="button is-rounded is-info is-inverted">About</a>
             </div>
+            {% if user.is_authenticated %}
+                    <div class="navbar-menu navbar-end">
+                        <span class="navbar-item">Welcome: {{user.username}}</span>
+                        <a class="navbar-item" href="{% url 'logout' %}">Logout</a>
+                    </div>
+                {% else %}
+                    <div class="navbar-menu navbar-end">
+                        <a class="navbar-item" href="{% url 'login' %}">Log In</a>
+                    </div>
+                {% endif %}
         
         </nav>
         <div class="container">
