--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
     <body >
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-menu navbar-end">
-                <a class="navbar-item" href="/" class="button is-rounded is-info is-inverted">Trippin</a>
+                <a class="navbar-item" href="/" class="button is-rounded is-info is-inverted">Home</a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
