--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,5 +1,12 @@
 
 {% extends 'base.html' %}
 {% block content %}
-<h1>Trippin</h1>
+<h1 class="title">Trippin</h1>
+
+<!-- Wnat to build in functionality to get images to rotate -->
+<div class="home-page-images">
+    <img src="https://media.istockphoto.com/id/637710754/photo/aerial-view-of-london-and-the-river-thames.jpg?s=612x612&w=0&k=20&c=UOe0zHdKQ99-EHi-2l54hLwDA5VNqJv_vKmYEDAK9xw=">
+    <!-- <img src="https://media.istockphoto.com/id/1228962068/photo/colorful-autumn-season-and-mountain-fuji-with-morning-fog-and-red-leaves-at-lake-kawaguchiko.jpg?s=612x612&w=0&k=20&c=fsAoWZPMPv0iqwmGLVWginjP_jk3-tVsBCg4ym-e_Js=">
+  </div> -->
+
 {% endblock %}
