--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -12,8 +12,11 @@ body {
     margin-top: auto;
     text-align: center;
     padding: 20px;
+    margin: 100px;
     background-color: #f5f5f5;
   }
+
+
 
 
 .title, .subtitle{
