added Github to about page

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %} {% block content %}
 <h1 class="title is-4">About Trippin</h1>
 <h2 class="subtitle">A place to plan your trips together with your family and friends. </h2>
+<br>
+<a href="https://github.com/kellims/Capstone-Project-Trippin"  class="button is-centered">
+    <span class="icon">
+      <i class="fab fa-github"></i>
+    </span>
+    <span>GitHub</span>
+</a>
 {% endblock %}
