--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %} 
 {% block content %}
 <div class="detail__img">
-    <img src="{{trip.image}}" alt="{{trip.location}}" />
+    <figure class="image is-64x64"></figure>
+        <img src="{{trip.image}}" alt="{{trip.location}}" />
+    </figure>    
 </div>
 <div class="detail__name">
     
