debug after deployment

--- a/main_app/templates/trip_detail.html
+++ b/main_app/templates/trip_detail.html
@@ -73,7 +73,7 @@
                 <div class="control">
                     <input
                         class="input"
-                        type="date"
+                        type="text"
                         name="start_date"
                         placeholder="Start Date"
                         required
@@ -82,7 +82,7 @@
                 <div class="control">
                     <input
                         class="input"
-                        type="date"
+                        type="text"
                         name="end_date"
                         placeholder="End Date"
                     />
