--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,11 +1,18 @@
 {% extends 'base.html' %} {% block content %}
-<h1 class="title is-4">About Trippin</h1>
-<h2 class="subtitle">A place to plan your trips together with your family and friends. </h2>
+<h1 class="title is-4">Trippin</h1>
 <br>
-<a href="https://github.com/kellims/Capstone-Project-Trippin"  class="button is-centered">
-    <span class="icon">
-      <i class="fab fa-github"></i>
-    </span>
-    <span>GitHub</span>
-</a>
+<h2 class="subtitle"> An itinerary app where you can organize reservations and tickets by trip or event. This keeps each trip organized, helps with planning, and provides easy access to important details while on the trip. One place to plan your trips together with your family and friends. </h2>
+<br>
+<h4 class="subtitle">Technologies Used:
+    <div>
+    + Python-Django, HTML, CSS</h4>
+    </div>
+<div class="container has-text-centered">    
+    <a href="https://github.com/kellims/Capstone-Project-Trippin"  class="button ">
+        <span class="icon">
+        <i class="fab fa-github"></i>
+        </span>
+        <span>GitHub</span>
+    </a>
+</div>    
 {% endblock %}
