about page updated

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -3,10 +3,11 @@
 <br>
 <h2 class="subtitle"> An itinerary app where you can organize reservations and tickets by trip or event. This keeps each trip organized, helps with planning, and provides easy access to important details while on the trip. One place to plan your trips together with your family and friends. </h2>
 <br>
-<h4 class="subtitle">Technologies Used:
+<h4 class="subtitle"><strong>Technologies Used:</strong>
     <div>
-    + Python-Django, HTML, CSS</h4>
-    </div>
+    + Python-Django, HTML, CSS
+    </div>  </h4>
+    
 <div class="container has-text-centered">    
     <a href="https://github.com/kellims/Capstone-Project-Trippin"  class="button ">
         <span class="icon">
@@ -14,5 +15,16 @@
         </span>
         <span>GitHub</span>
     </a>
-</div>    
+</div>
+<br>
+<h4 class="subtitle"><strong>User Stories:</strong>
+    <div>
+        • As a user, I can log into my account to access my trips.<br>
+        • As a user, I can create multiple trip on my profile.<br>
+        • As a user, I can edit the details of a trip.<br>
+        • As a user, I can add multiple reservations to each trip.<br>
+        • As a user, I can upload documents to my reservations, such as tickets which may be needed on the trip.<br>
+        • As a user, I can organize my reservations by type (restaurant reservations, day trips, tickets, site seeing locations, etc.)<br>
+        • As a user, I can edit and/or delete any reservations from my trip.<br>
+    </div>  </h4>    
 {% endblock %}
