added comment to base.html

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -19,7 +19,7 @@
 <br>
 <h4 class="subtitle"><strong>User Stories:</strong>
     <div>
-        • As a user, I can log into my account to access my trips.<br>
+        • As a user, I can log into my account so that I have access to my personal trips.<br>
         • As a user, I can create multiple trip on my profile.<br>
         • As a user, I can edit the details of a trip.<br>
         • As a user, I can add multiple reservations to each trip.<br>
